<resources>
    <string name="app_name">Queue Pad</string>

    <string name="action_settings">Settings</string>
    <string name="new_service_button">New Service</string>
    <string name="title_activity_new_service">New Service</string>

    <string name="service_name_hint">Service Name</string>
    <string name="service_note_hint">Optional note</string>
    <string name="title_activity_view_service">View Service</string>
    <string name="view_service_name_hint">Service Name</string>
    <string name="view_service_note_hint">Service Note</string>
    <string name="view_service_queue_button">Add Queue</string>
    <string name="menu_main_icon_plus">Add Queue</string>
    <string name="menu_main_icon_bell">Call Next</string>
    <string name="view_activity_call_button">Call</string>
    <string name="title_activity_new_queue">Add Queue</string>
    <string name="new_queue_name_hint">Enter name</string>
    <string name="new_queue_notes_hint">Optional notes</string>
    <string name="new_queue_submit_button">Add Queue</string>
    <string name="new_queue_mobile_number_hint">Mobile Number</string>
    <string name="nav_monitor_queue_title">Monitor Queue</string>
    <string name="nav_sms_title">Sms</string>
    <string name="nav_reports_title">Reports</string>
    <string name="nav_settings_title">Settings</string>
    <string name="drawer_open">Open Nav</string>
    <string name="drawer_close">Close Nav</string>
    <string name="settings_company_name">COMPANY NAME</string>
    <string name="settings_automatic_clean_summary">This will make the system clear up the Customer Queue List everyday, during the selected cut off time</string>
    <string name="settings_automatic_clean_title">Automatically remove all customers in the Queue List by:</string>
    <string name="settings_manual_call_summary">This will allow you to bypass the sequence order of customers, you can tap on the specific customer record and call him/her as the next in line.</string>
    <string name="settings_manual_call_title">Allow manual call of customers in the Queue List</string>
    <string name="settings_24hour_format_title">Use 24-hour Time Format</string>
    <string name="settings_date_format_title">DATE FORMAT</string>
    <string name="settings_language_title">LANGUAGE</string>
    <string name="settings_service_edit_title">Services</string>
    <string name="dialog_new_service_help_text">Each Service will have a separate queue of customers. You can create a maximum of 5 sets of Services.</string>
    <string name="dialog_new_service_hint">Service Name</string>
    <string name="dialog_new_service_save_button">Save</string>
    <string name="dialog_new_service_cancel_button">Cancel</string>
    <string name="dialog_edit_service_helper_text">Each Service will have a separate queue of customers. You can create a maximum of 5 sets of Services.</string>
    <string name="dialog_edit_service_hint">Service Name</string>
    <string name="dialog_edit_service_save_button">Save</string>
    <string name="dialog_edit_service_cancel_button">Cancel</string>
    <string name="dialog_edit_service_icon_helper_text">Please select an icon most appropriate for this service.</string>
    <string name="view_service_label_total_count">Total Count</string>
    <string name="view_service_label_ave_waiting_time">Ave. Waiting Time</string>
    <string name="monitor_queue_label_name">Name</string>
    <string name="monitor_queue_label_arrival_time">Arrival Time</string>




    <string name="KEY_PREFERENCE_COMPANY_NAME">ivant_queuepad_company_name</string>
    <string name="KEY_PREFERENCE_LANGUAGE">ivant_queuepad_language</string>
    <string name="KEY_PREFERENCE_DATE_FORMAT">ivant_queuepad_date_format</string>
    <string name="KEY_PREFERENCE_HOUR_FORMAT">ivant_queuepad_hour_format</string>
    <string name="KEY_PREFERENCE_MANUAL_CALL">ivant_queuepad_manual_call</string>
    <string name="KEY_PREFERENCE_AUTOMATIC_CLEAN">ivant_queuepad_automatic_clean</string>
    <string name="KEY_PREFERENCE_AUTOMATIC_CLEAN_TIME">ivant_queuepad_automatic_clean_time</string>


    <string-array
        name="settings_languages">
        <item>English</item>
        <item>Filipino</item>
        <item>Chinese</item>
        <item>Portuguese</item>
        <item>Spanish</item>
        <item>Japanese</item>
    </string-array>

    <string-array name="settings_date_format">
        <item>MM/dd/yy</item>
        <item>dd/MM/yy</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monitor_queue_label_waiting_time">Waiting Time</string>
    <string name="view_service_call_next">Call Next</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="dialog_call_next_waiting_time">WAITING TIME</string>
    <string name="dialog_call_next_arrived">ARRIVED</string>
    <string name="dialog_call_next_noshow">NO SHOW</string>
    <string name="dialog_call_next_cancel">CANCEL</string>
    <string name="dialog_edit_service_default_waiting_time">Default Waiting Time</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="sms_welcome_message">Welcome Message</string>
    <string name="sms_message">Hi CustomerName. Thank you for visiting CompanyName. You are currently CurrentQueuePosition in line, estimated time to be served is EstimatedTime. We will notify you once you are number FirstNotifyPosition in line. Thanks!</string>
    <string name="sms_button">Button</string>
    <string name="title_activity_reports">ReportsActivity</string>


</resources>
