<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/preferences_fragment">
    <EditTextPreference
        android:key="company_name"
        android:title="@string/settings_company_name"
        android:defaultValue="Company ABC" />
    <ListPreference
        android:key="language"
        android:title="@string/settings_language_title"
        android:dialogTitle="@string/settings_language_title"
        android:entries="@array/settings_languages"
        android:entryValues="@array/settings_languages"
        android:defaultValue="English"/>
    <ListPreference
        android:key="date_format"
        android:title="@string/settings_date_format_title"
        android:dialogTitle="@string/settings_date_format_title"
        android:entries="@array/settings_date_format"
        android:entryValues="@array/settings_date_format"
        android:defaultValue="mm/dd/yy"/>
    <CheckBoxPreference
        android:key="hour_format"
        android:title="@string/settings_24hour_format_title"
        android:defaultValue="false" />
    <PreferenceCategory>
        <CheckBoxPreference
            android:key="manual_call"
            android:title="@string/settings_manual_call_title"
            android:summary="@string/settings_manual_call_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="automatic_clean"
            android:title="@string/settings_automatic_clean_title"
            android:summary="@string/settings_automatic_clean_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>