<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serviceName"
        android:hint="@string/view_service_name_hint"
        android:textSize="27dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_service_note_hint"
        android:id="@+id/serviceNote"
        android:layout_below="@+id/serviceName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/queueList"
        android:layout_below="@+id/serviceNote"
        android:layout_above="@+id/newQueueButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newQueueButton"
        android:text="@string/view_service_queue_button"
        android:layout_alignParentBottom="true"
        android:onClick="newQueue"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/callButton"
        android:text="@string/view_activity_call_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/newQueueButton"
        android:onClick="callNext"/>
</RelativeLayout>
