<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.ivant.qapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.james.queuepadui.MainActivity">

        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_main"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="211dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="44dp"
            android:layout_marginEnd="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sms_welcome_message"
                android:id="@+id/textView3"
                android:layout_below="@+id/toolbar_main"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="42dp"
                android:textSize="12sp" />

            <Button
                android:layout_width="116dp"
                android:layout_height="27dp"
                android:text="@string/sms_button"
                android:id="@+id/button3"
                android:background="@drawable/roundedbutton"
                android:elevation="5dp"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:drawableLeft="@drawable/eyeicon"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_alignRight="@+id/textView12"
                android:layout_alignEnd="@+id/textView12"
                android:layout_toEndOf="@+id/textView12"
                android:layout_below="@+id/textView12"
                android:layout_toRightOf="@+id/textView12"
                android:layout_gravity="right|bottom" />

            <TextView
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sms_message"
                android:id="@+id/textView12"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="15sp" />
        </FrameLayout>

    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:layout_width="208dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#EEE"
        app:layout="@layout/fragment_navigation_drawer"
        android:name="com.tech.ivant.qapp.fragments.fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
